--- a/style.css
+++ b/style.css
@@ -3,8 +3,29 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+:root {
+
+}
+
+body {
+    margin: 0;
+}
+
 .full-screen-container {
    background-image: url("Images/background_img.jpg");
    height: 656px;
    width: 1536px;
+   background-size: cover;
+   background-position: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.login-container {
+    background-color: blue;
+}
+
+.login-title {
+    margin: 0;
 }
