--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
 }
 
 :root {
-
+--primary-light-hsl: 200, 100%, 91%;
+--primary-hsl: 200, 100%, 50%;
+ --primary-dark-hsl: 200, 100%, 6%;
 }
 
 body {
