--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .login-container {
-    background-color:  hsl(200, 100%, 50%, .5);
+    background-color:  hsl(var(--primary-dark-hsl), .7); 
 }
 
 .login-title {
