--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     background-color:  hsl(var(--primary-dark-hsl), .7); 
     box-shadow: 0 0 15px 0 var(--color);
     padding: 40px 30px;
+    width: 80%;
 }
 
 .login-title {
