max-width: 600px;

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     box-shadow: 0 0 15px 0 var(--color);
     padding: 40px 30px;
     width: 80%;
+    max-width: 600px;
 }
 
 .login-title {
