--- a/style.css
+++ b/style.css
@@ -36,4 +36,8 @@ body {
 
 .login-title {
     margin: 0;
+    color: white;
+    text-align: center;
+    font-size: 35px;
+    font-weight: normal;
 }
