.input-group label {     color: white;     font-weight: lighter;

--- a/style.css
+++ b/style.css
@@ -55,3 +55,9 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.input-group label {
+    color: white;
+    font-weight: lighter;
+ 
+}
