color: white;     font-weight: lighter;

--- a/style.css
+++ b/style.css
@@ -69,5 +69,8 @@ body {
     border: none;
     outline: none;
     border-radius: 5px;
-        
+    color: white;
+    font-weight: lighter;
+
+
 }
