--- a/style.css
+++ b/style.css
@@ -73,6 +73,6 @@ body {
     font-weight: lighter;
 }
 
-.input-group:focus {
+.input-group input:focus {
     box-shadow: 0 0 0 1px hsl(var(--primary-hsl), .3);
 }
