--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 --primary-light-hsl: 200, 100%, 91%;
 --primary-hsl: 200, 100%, 50%;
  --primary-dark-hsl: 200, 100%, 6%;
+ --success-hsl: 100, 60%, 50%;
 }
 
 body {
@@ -73,11 +74,21 @@ body {
     font-weight: lighter;
 }
 
-.input-group input.success {
-    box-shadow: 0 0 0 1px hsl(var(--success-hsl),);
+.input-group.success input {
+    box-shadow: 0 0 0 1px hsl(var(--success-hsl));
+
+}
+
+.input-group.error input {
+    box-shadow: 0 0 0 1px hsl(var(--error-hsl));
 
 }
 
 .input-group input:focus {
     box-shadow: 0 0 0 1px hsl(var(--primary-hsl),);
+}
+
+.input-group .msg {
+    display: none;
+    font-size: 75rem;
 }
